# toy

./: .gitignore
blog/: pyproject.toml
blog/IT-8-aws-business-and-iam/init/: 1-terraformer.tf  2-s3_access.tf  provider.tf  variables.tf
blog/it-startup-4-it-world-supported-by-cryptography/aes/: aes16.py
blog/it-startup-4-it-world-supported-by-cryptography/enigma/: enigma.py  test_enigma.py
blog/it-startup-4-it-world-supported-by-cryptography/sha256/: sha256.py  test_sha256.py
blog/it-startup-5-partitioning-consensus/consistent_hashing/: consistent_hashing.py
blog/it-startup-5/consistent_hashing/: consistent_hashing.py  test_consistent_hashing.py
blog/it-startup-5/raft/: raft.py  test_raft.py
blog/it-startup-6-essays-about-compute-resources/meminfo/: Dockerfile
blog/it-startup-6-essays-about-compute-resources/process_life_cycle/: ppid_init_transition.sh  zombie.py
