[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
black = "^24.4.2"
ipython = "^8.26.0"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^71.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
